--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foo",
+  "name": "react-bootstrap",
   "version": "0.0.1",
   "license": "MIT",
   "author": "John Shearer <john@ultranaut.com>",
